# cargo-features = ["strip"]

[package]
name = "nyaa"
version = "0.1.0"
authors = ["Federico Morrone <flickmor@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
# panic = "abort"
# strip = "symbols"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10"}
tokio = { version = "0.2", features = ["full"] }
clap = "2.33"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
kuchiki = "0.8"
regex = "1.4"
