[package]
name = "nyaa"
version = "0.1.0"
authors = ["Federico Morrone <flickmor@gmail.com>"]
edition = "2018"

[dependencies]
nyaa_core = { path = "../core", version = "0.1"}
anyhow = "1.0"
tokio = { version = "1.18", features = ["macros"] }
clap = "2.33"
indicatif = "0.15"

[[bin]]
name = "nyaa"
path = "main.rs"
doc = false