[package]
name = "nyaa_core"
version = "0.1.0"
authors = ["Federico Morrone <flickmor@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.35"
async-trait = "0.1.42"
either = "1.6.1"
mime = { git = "https://github.com/hyperium/mime.git", features = ["serde1"] }
regex = "1.4.2"
reqwest = { version = "0.10.9"}
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
tokio = { version = "0.2.23", features = ["fs"] }
url = "2.2.0"

[lib]
path = "lib.rs"